# krkhc

./: AEGIS_TechStack.docx  AGENTS.md  PROJECT_STATUS.md  README.md  reproduce_issue.py
backend/: log.txt  main.py  nixpacks.toml  pyproject.toml  railway.toml  seed.py  seed_debug_log.txt  seed_log.txt  seed_log_final.txt  seed_log_ps.txt  seed_output.txt  start.sh  test_login_repro.py
backend/app/api/: auth.py  courses.py  files.py  grievances.py  opportunities.py  users.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: academic.py  grievance.py  opportunity.py  user.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/calendar/: page.tsx
frontend/app/(dashboard)/courses/: page.tsx
frontend/app/(dashboard)/courses/[id]/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/grievances/: page.tsx
frontend/app/(dashboard)/grievances/[id]/: page.tsx
frontend/app/(dashboard)/opportunities/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/components/layout/: dashboard-layout.tsx
frontend/lib/: api.ts
